[package]
name = "rustyAudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
rodio = "0.17"
metaflac = "0.2"
id3 = "1.12.0"
discord-rich-presence ="0.2.3"
discord-presence = "1.0.0"
discord-rpc = "0.1.0"
lofty = "0.18.2"

